Fixed some spacing issue on Posts

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -284,7 +284,7 @@ strong {
   align-items: center;
 }
 .posts-list-container .each-post {
-  width: 32%;
+  width: 29%;
   text-align: center;
   background: rgba(245, 216, 137, 0.11);
   border-radius: 10px;
